modification de chaque fichier

--- a/calendar.html
+++ b/calendar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Calendar</title>
@@ -22,45 +22,43 @@
         <div class="sidebar-menu">
             <ul>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-1.png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="logo dashboard noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-1.png" alt="logo dashboard bleu">
                     <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
                 </li>
                 <li class="liste" >
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(8).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons-blanc-2.png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(8).png" alt="logo projet noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons-blanc-2.png" alt="loggo projet bleu">
                     <a href="#" class="w3-bar-item ">Project</a>
                 </li>
                 <li class="liste calendar_active">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="">
-                    <img  src="images/icon_blanc/icons8-blanc-3.png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="logo calendrier noire">
+                    <img  src="images/icon_blanc/icons8-blanc-3.png" alt="logo calendrier bleu">
                     <a href="calendar.html" class="w3-bar-item ">Calendar</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="logo homme noire">
+                    <img class="images_blanc" src="images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="logo homme bleu">
                     <a href="#" class="w3-bar-item ">Teams</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim.png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-5.png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim.png" alt="analytique noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-5.png" alt="analytique bleu">
                     <a href="#" class="w3-bar-item ">Analytics</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/source-code--v4.png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-6.png" alt="">
+                    <img class="images_noire" src="images/picture/source-code--v4.png" alt="integration noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-6.png" alt="integration bleu">
                     <a href="setting.html" class="w3-bar-item ">Integrations</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(5).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-7.png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(5).png" alt="logo message noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-7.png" alt=" logo message bleu">
                     <a href="#" class="w3-bar-item ">Messages</a>
                 </li>
             </ul>
 
         </div>
-
-        <!--    *******************-->
         <div class="sidebar-images">
             <img src="images/picture/Avatar%201674-button.png" alt="">
             <div class="text">
@@ -71,7 +69,7 @@
     </div>
 </div>
 
-<!--**************************************************************-->
+<!--*****container-section-1******-->
 <section class="container-section-1" style="margin-left: 18%;background-color: white">
     <div class="partie">
         <div class="partie-A">
@@ -279,7 +277,6 @@
     </div>
 </section>
 
-
 <section  class="container-section-2" style="margin-left: 18%;background-color: white">
     <div class="part">
         <div class="partie-C">
@@ -435,7 +432,6 @@
             </div>
         </div>
 
-
         <div class="partie-D">
             <div class="big-container">
                 <div class="nav">
@@ -501,38 +497,38 @@
             </div>
         </div>
     </div>
-<!--  ********partie_resp*********  -->
+<!--  ********partie en version mobil*********  -->
     <div class="line_verticale"></div>
     <div class="partie_resp">
         <div class="pariatur part_1">
-            <img src="images/image_responsive/Avatar%20006.png" alt="">
+            <img src="images/image_responsive/Avatar%20006.png" alt="avatar 1">
             <p>Pariatur ex duis</p>
         </div>
         <div class="pariatur part_2">
-            <img src="images/image_responsive/Avatar%20006.png" alt="">
+            <img src="images/image_responsive/Avatar%20006.png" alt="avatar 2">
             <p>Pariatur ex duis</p>
         </div>
         <div class="pariatur part_3">
             <div class="img">
-                <img src="images/image_responsive/Avatar%20008.png" alt="">
-                <img class="img_2" src="images/image_responsive/Avatar%20009.png" alt="">
+                <img src="images/image_responsive/Avatar%20008.png" alt="avatar 3">
+                <img class="img_2" src="images/image_responsive/Avatar%20009.png" alt="avatar 4">
             </div>
             <p>Pariatur ex duis</p>
         </div>
         <div class="pariatur part_4">
             <div class="img">
-                <img src="images/image_responsive/Avatar%2000010.png" alt="">
-                <img class="img_2" src="images/image_responsive/Avatar%2000011.png" alt="">
-                <img class="img_2" src="images/image_responsive/Avatar%2000012.png" alt="">
+                <img src="images/image_responsive/Avatar%2000010.png" alt="avatar 5">
+                <img class="img_2" src="images/image_responsive/Avatar%2000011.png" alt="avatar 6">
+                <img class="img_2" src="images/image_responsive/Avatar%2000012.png" alt="avatar 7">
             </div>
             <p>Consequat magna</p>
         </div>
         <div class="pariatur part_5">
-            <img src="images/image_responsive/Avatar%2000013.png" alt="">
+            <img src="images/image_responsive/Avatar%2000013.png" alt="avatar 8">
             <p>Pariatur ex duis</p>
         </div>
         <div class="pariatur part_6">
-            <img src="images/image_responsive/Avatar%20006.png" alt="">
+            <img src="images/image_responsive/Avatar%20006.png" alt="avatar 9">
             <p>Paria</p>
         </div>
         <div class="btn_add">
@@ -544,30 +540,30 @@
 <div class="tabbar_menu">
     <ul>
         <li class="foot_page">
-            <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="">
-            <img class="image_bleu" src="images/image_responsive/icons8-four-squares-48.png" alt="">
+            <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="logo dashboard noire">
+            <img class="image_bleu" src="images/image_responsive/icons8-four-squares-48.png" alt="logo dashboard bleu">
             <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
         </li>
         <li class="foot_page calendar_active">
-            <img  class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="">
-            <img class="image_bleu" src="images/image_responsive/icons8-calendar-31-50.png" alt="">
+            <img  class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="logo calendrier noire">
+            <img class="image_bleu" src="images/image_responsive/icons8-calendar-31-50.png" alt="logo calendrier bleu">
             <a href="calendar.html" class="w3-bar-item ">Calendar</a>
 
         </li>
         <li class="foot_page">
-            <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="">
-            <img class="image_bleu" src="images/image_responsive/user-account-50.png" alt="">
+            <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="logo homme noire">
+            <img class="image_bleu" src="images/image_responsive/user-account-50.png" alt="logo homme bleu">
             <a href="#" class="w3-bar-item ">Teams</a>
         </li>
 
         <li class="foot_page">
-            <img class="images_noire" src="images/image_responsive/message_12.png" alt="">
-            <img class="image_bleu" src="images/image_responsive/message11-32%20(1).png" alt="">
+            <img class="images_noire" src="images/image_responsive/message_12.png" alt="logo message noire">
+            <img class="image_bleu" src="images/image_responsive/message11-32%20(1).png" alt="logo message bleu">
             <a href="#" class="w3-bar-item ">Messages</a>
         </li>
         <li class="foot_page">
-            <img class="images_noire" src="images/image_responsive/icons8-setting-64.png" alt="">
-            <img class="image_bleu" src="images/image_responsive/icons8-setting-64%20(2).png" alt="">
+            <img class="images_noire" src="images/image_responsive/icons8-setting-64.png" alt="logo parametre noire">
+            <img class="image_bleu" src="images/image_responsive/icons8-setting-64%20(2).png" alt="logo paramatre bleu">
             <a href="setting.html" class="w3-bar-item ">Setting</a>
         </li>
     </ul>
