--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>dashboard</title>
@@ -22,38 +22,38 @@
         <div class="sidebar-menu">
             <ul>
                 <li class="liste dashboard_active" style="background-color: #00bdd6">
-                    <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="">
-                    <img src="images/picture/four-squares-50.png" alt="">
+                    <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="logo dashboard noire">
+                    <img src="images/picture/four-squares-50.png" alt="logo dashboaed bleu">
                     <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
                 </li>
                 <li class="liste">
-                    <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(8).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons-blanc-2.png" alt="">
+                    <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(8).png" alt="logo projet noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons-blanc-2.png" alt="logo projet bleu">
                     <a href="#" class="w3-bar-item ">Project</a>
                 </li>
                 <li class="liste">
-                    <img  class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-3.png" alt="">
+                    <img  class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="logo calendrier noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-3.png" alt="logo calendrier bleu">
                     <a href="calendar.html" class="w3-bar-item ">Calendar</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="logo homme noire">
+                    <img class="images_blanc" src="images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="logo homme bleu">
                     <a href="#" class="w3-bar-item ">Teams</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim.png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-5.png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim.png" alt="analytique noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-5.png" alt="analitique bleu">
                     <a href="#" class="w3-bar-item ">Analytics</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/source-code--v4.png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-6.png" alt="">
+                    <img class="images_noire" src="images/picture/source-code--v4.png" alt="integration noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-6.png" alt="integration bleu">
                     <a href="setting.html" class="w3-bar-item ">Integrations</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(5).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-7.png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(5).png" alt="logo message noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-7.png" alt="logo message bleu">
                     <a href="#" class="w3-bar-item ">Messages</a>
                 </li>
             </ul>
@@ -350,29 +350,29 @@
     <div class="tabbar_menu">
         <ul>
             <li class="foot_page dashboard_active">
-                <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="">
-                <img class="image_bleu" src="images/image_responsive/icons8-four-squares-48.png" alt="">
+                <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="logo dashboard noir">
+                <img class="image_bleu" src="images/image_responsive/icons8-four-squares-48.png" alt="logo dashboard bleu">
                 <a href="dashboard.html">Dashboard</a>
             </li>
             <li class="foot_page">
-                <img  class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="">
-                <img class="image_bleu" src="images/image_responsive/icons8-calendar-31-50.png" alt="">
+                <img  class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="logo calendrier noir">
+                <img class="image_bleu" src="images/image_responsive/icons8-calendar-31-50.png" alt="logo calendrier bleu">
                 <a href="calendar.html" >Calendar</a>
             </li>
             <li class="foot_page">
-                <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="">
-                <img class="image_bleu" src="images/image_responsive/user-account-50.png" alt="">
+                <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="logo home noir">
+                <img class="image_bleu" src="images/image_responsive/user-account-50.png" alt="logo home bleu">
                 <a href="#" >Teams</a>
             </li>
 
             <li class="foot_page">
-                <img class="images_noire" src="images/image_responsive/mes24%20(3).png" alt="">
-                <img class="image_bleu" src="images/image_responsive/message-24.png" alt="">
+                <img class="images_noire" src="images/image_responsive/mes24%20(3).png" alt="logo message noir">
+                <img class="image_bleu" src="images/image_responsive/message-24.png" alt="logo message bleu">
                 <a href="#" >Messages</a>
             </li>
             <li class="foot_page">
-                <img class="images_noire" src="images/image_responsive/icons8-setting-64.png" alt="">
-                <img class="image_bleu" src="images/image_responsive/icons8-setting-64%20(2).png" alt="">
+                <img class="images_noire" src="images/image_responsive/icons8-setting-64.png" alt="logo parametre noir">
+                <img class="image_bleu" src="images/image_responsive/icons8-setting-64%20(2).png" alt="logo parametre bleu">
                 <a href="setting.html" >Setting</a>
             </li>
         </ul>
