--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <title>registration</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="body_index">
+<body class="body_registration">
 <header class="head">
     <a href=""><img src="images/resi/Image%202345%20(1).png" alt="logo de registration"></a>
 </header>
 <section class="container_registration">
     <div class="picture">
-        <img class="images" src="images/resi/Group%20200%20(1).png" alt="">
+        <div class="images"><img src="images/resi/Group%20200%20(1).png" alt=""></div>
         <div class="container">
             <div class="content">
                 <h1>Create an account</h1>
