--- a/setting.html
+++ b/setting.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
 </head>
 <body>
 <div class="w3-sidebar w3-bar-block w3-sidebar " style="width:18%;height: 100vh">
@@ -24,44 +23,42 @@
         <div class="sidebar-menu">
             <ul>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-1.png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="logo dashboard noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-1.png" alt="logo dashboard bleu">
                     <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
                 </li>
                 <li class="liste" >
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(8).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons-blanc-2.png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(8).png" alt="logo projet noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons-blanc-2.png" alt="logo projet bleu">
                     <a href="#" class="w3-bar-item ">Project</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-3.png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="logo calendrier noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-3.png" alt="logo calendrier bleu">
                     <a href="calendar.html" class="w3-bar-item ">Calendar</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="logo homme noire">
+                    <img class="images_blanc" src="images/icon_blanc/imgpsh_fullsize_anim%20(2).png" alt="logo homme bleu">
                     <a href="#" class="w3-bar-item ">Teams</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim.png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-5.png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim.png" alt="logo analytique noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-5.png" alt="logo analytique bleu">
                     <a href="#" class="w3-bar-item ">Analytics</a>
                 </li>
                 <li class="liste integration_active">
-                    <img class="images_noire" src="images/picture/source-code--v4.png" alt="">
-                    <img src="images/icon_blanc/icons8-blanc-6.png" alt="">
+                    <img class="images_noire" src="images/picture/source-code--v4.png" alt="integration noire">
+                    <img src="images/icon_blanc/icons8-blanc-6.png" alt="integration bleu">
                     <a href="setting.html" class="w3-bar-item ">Integrations</a>
                 </li>
                 <li class="liste">
-                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(5).png" alt="">
-                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-7.png" alt="">
+                    <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(5).png" alt="logo parametre noire">
+                    <img class="images_blanc" src="images/icon_blanc/icons8-blanc-7.png" alt="logo parametre bleu">
                     <a href="#" class="w3-bar-item ">Messages</a>
                 </li>
             </ul>
-
         </div>
-
         <!--    *******************-->
         <div class="sidebar-images">
             <img src="images/picture/Avatar%201674-button.png" alt="">
@@ -72,7 +69,6 @@
         </div>
     </div>
 </div>
-
 <!-- Page Content -->
 <section class="corps setting" style="margin-left:18%">
     <div class="texto-img-button">
@@ -112,7 +108,6 @@
             </div>
         </div>
     </div>
-
     <!-- ******lien-logo******   -->
     <div class="lien-https">
         <div class="logo">
@@ -159,7 +154,7 @@
         <hr>
         <div class="logo">
             <div class="logo-text">
-                <a href="">
+                <a href="#">
                     <img src="images/Bilder/Images-line.png" alt="">
                 </a>
                 <div class="titre-para">
@@ -180,7 +175,7 @@
         <hr>
         <div class="logo">
             <div class="logo-text">
-                <a href="">
+                <a href="#">
                     <img src="images/Bilder/Image-meinterest.png" alt="">
                 </a>
                 <div class="titre-para">
@@ -201,7 +196,7 @@
         <hr>
         <div class="logo">
             <div class="logo-text">
-                <a href="">
+                <a href="#">
                     <img src="images/Bilder/Image-slack.png" alt="">
                 </a>
                 <div class="titre-para">
@@ -222,7 +217,7 @@
         <hr>
         <div class="logo">
             <div class="logo-text">
-                <a href="">
+                <a href="#">
                     <img src="images/Bilder/Image%202553-skype.png" alt="">
                 </a>
                 <div class="titre-para">
@@ -243,7 +238,7 @@
         <hr>
         <div class="logo">
             <div class="logo-text">
-                <a href="">
+                <a href="#">
                     <img src="images/Bilder/Image%202557-jira.png" alt="">
                 </a>
                 <div class="titre-para">
@@ -264,7 +259,7 @@
         <hr>
         <div class="logo">
             <div class="logo-text">
-                <a href="">
+                <a href="#">
                     <img src="images/Bilder/Image%202558-instagrame.png" alt="">
                 </a>
                 <div class="titre-para">
@@ -300,33 +295,31 @@
 <div class="tabbar_menu">
     <ul>
         <li class="foot_page ">
-            <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="">
-            <img class="image_bleu" src="images/image_responsive/icons8-four-squares-48.png" alt="">
+            <img  class="images_noire"  src="images/picture/imgpsh_fullsize_anim%20(1).png" alt="logo dashboard noire">
+            <img class="image_bleu" src="images/image_responsive/icons8-four-squares-48.png" alt="logo dashboard bleu">
             <a href="dashboard.html" class="w3-bar-item">Dashboard</a>
         </li>
         <li class="foot_page">
-            <img  class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="">
-            <img class="image_bleu" src="images/image_responsive/icons8-calendar-31-50.png" alt="">
+            <img  class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(7).png" alt="logo calendrier noire">
+            <img class="image_bleu" src="images/image_responsive/icons8-calendar-31-50.png" alt="logo calendrier bleu">
             <a href="calendar.html" class="w3-bar-item ">Calendar</a>
         </li>
         <li class="foot_page">
-            <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="">
-            <img class="image_bleu" src="images/image_responsive/user-account-50.png" alt="">
+            <img class="images_noire" src="images/picture/imgpsh_fullsize_anim%20(6).png" alt="logo homme noire">
+            <img class="image_bleu" src="images/image_responsive/user-account-50.png" alt="logo homme bleu">
             <a href="#" class="w3-bar-item ">Teams</a>
         </li>
-
         <li class="foot_page">
-            <img class="images_noire" src="images/image_responsive/message_12.png" alt="">
-            <img class="image_bleu" src="images/image_responsive/message11-32%20(1).png" alt="">
+            <img class="images_noire" src="images/image_responsive/message_12.png" alt="logo message noire">
+            <img class="image_bleu" src="images/image_responsive/message11-32%20(1).png" alt="logog message bleu">
             <a href="#" class="w3-bar-item ">Messages</a>
         </li>
         <li class="foot_page setting_active">
-            <img class="images_noire" src="images/image_responsive/icons8-setting-64.png" alt="">
-            <img class="image_bleu" src="images/image_responsive/icons8-setting-64%20(2).png" alt="">
+            <img class="images_noire" src="images/image_responsive/icons8-setting-64.png" alt="logo parametre  noire">
+            <img class="image_bleu" src="images/image_responsive/icons8-setting-64%20(2).png" alt="logo parametre bleu">
             <a href="setting.html" class="w3-bar-item ">Setting</a>
         </li>
     </ul>
 </div>
-
 </body>
 </html>
